Finished ch12Challenges

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".CrimePagerActivity">
         </activity>
-    </application>
+        <activity android:name=".DatePickerActivity"/>
+    </application>kl
 
 </manifest>
